<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="private_num">Private number</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="speed_kph">km/h</string>
    <string name="speed_mph">mph</string>
    <string name="no_weather_data">No weather data</string>
    <string name="item_is_selected"><xliff:g example="2013" id="item">%1$s</xliff:g> selected</string>
    <string name="action_call">Call</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="calls_action_add_to_contacts">Add to contacts</string>
    <string name="action_tags">Tags</string>
    <string name="apps_action_app_info" import_source="info_target_label">App info</string>
    <string name="apps_action_uninstall" import_source="cab_menu_delete_app">Uninstall</string>
    <string name="notification_description">Appsii is running normally</string>
    <string name="notification_suspended">Appsii is suspended, tap to resume.</string>
    <string name="pref_hotspot_width_name">Hotspot width</string>
    <string name="pref_sidebar_size_name">Panel width</string>
    <string name="pref_sidebar_haptic_feedback_title">Haptic feedback</string>
    <string name="pref_sidebar_haptic_feedback_summary">Vibrate when the panel is touched.</string>
    <string name="activity_not_found">Error launching app.</string>
    <string name="no_email_client">No email client found</string>
    <string name="appsi_status_running">Appsii is started</string>
    <string name="appsi_status_stopped">Appsii is not started</string>
    <string name="pref_category_general">General</string>
    <string name="dim_amount">Dim amount</string>
    <string name="pref_about_title">About Appsii</string>
    <string name="pref_changelog_title">Changelog</string>
    <string name="pref_follow_me_title">About the developer</string>
    <string name="pref_community_title">Appsii users community</string>
    <string name="pref_become_beta_tester_title">Beta version</string>
    <string name="home_screen_name">Home</string>
    <string name="menu_add_hotspot">Add Panel</string>
    <string name="hotspot_name">Name</string>
    <string name="reopen_last_plugin">Reopen last page</string>
    <string name="look_and_feel_section_colors">Sidebar</string>
    <string name="done">Done</string>
    <string name="shortcut_title">Appsii</string>
    <string name="shortcut_title_hint">Shortcut name</string>
    <string name="open_from_left">Left</string>
    <string name="permission_control_appsi_label">Appsii licensing</string>
    <string name="permission_control_appsi_desc">Allows a connection between Appsii and an Appsi plugin to unlock similar features in Appsii</string>
    <string name="pref_icon_theme_name">Icon theme</string>
    <string name="icon_pack_none">No icon theme</string>
    <string name="pref_sidebar_dimming_level_title">Screen dimming</string>
    <string name="pref_sidebar_dimming_level_description">Dimming amount when the sidebar is opened.</string>
    <string name="pref_suggestions">Feature requests</string>
    <string name="pref_paging_animation_title">Paging animation</string>
    <string name="paging_animation_fade">Fade</string>
    <string name="paging_animation_zoom">Zoom</string>
    <string name="paging_animation_depth">Depth</string>
    <string name="paging_animation_tablet">Cover flow</string>
    <string name="pref_autostart_title">Auto start</string>
    <string name="edit">Edit</string>
    <string name="all_apps">All apps</string>
    <string name="folder_recent_apps">Recent apps</string>
    <string name="home_action_change_layout">Change layout</string>
    <string name="add_tag">Add tag</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_already_exists">Tag %1$s already exists</string>
    <string name="tag_error_empty">Tag name can\'t be empty</string>
    <string name="manage_tags">Manage tags</string>
    <string name="sort_apps">Sort apps</string>
    <string name="undo_delete">Undo deletion</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="other">Other</string>
    <string name="feature_title_calllog">Call log</string>
    <string name="item_price_free_early_access">Free early access</string>
    <string name="feature_title_agenda">Agenda</string>
    <string name="feature_people_title">People</string>
    <string name="feature_title_weather">Weather</string>
    <string name="feature_title_sms">SMS</string>
    <string name="option_column_count">Column count</string>
    <string name="apps_no_recent_apps">No recent apps</string>
    <string name="new_calendar_event">New event</string>
    <string name="all_day">All day</string>
    <string name="agenda_view_type_normal">Schedule</string>
    <string name="agenda_view_type_categories">Categorized</string>
    <string name="go_to_today">Go to today</string>
    <string name="empty_tag_text">This tag is empty</string>
    <string name="edit_tag">Edit tag</string>
    <string name="show_as_list">Show as list</string>
    <string name="expand_by_default">Expand by default</string>
    <string name="hide_hotspots">Hide hotspots</string>
    <string name="promo_unlock">Appsi plugins</string>
    <string name="appsi_calendar_plugin">Calendar plugin</string>
    <string name="appsi_calls_plugin">Calls plugin</string>
    <string name="appsi_sms_plugin">SMS plugin</string>
    <string name="appsi_settings_plugin">Settings plugin</string>
    <string name="appsi_contacts_plugin">Contacts plugin</string>
    <string name="appsi_powerpack_plugin">Powerpack plugin</string>
    <string name="theme">Theme</string>
    <string name="weather">Weather</string>
    <string name="weather_location">Location</string>
    <string name="weather_options_header">Weather options</string>
    <string name="weather_unit">Unit</string>
    <string name="weather_auto_location">Use local weather</string>
    <string name="weather_auto_location_summary">Based on the location you are at</string>
    <string name="unknown">Unknown</string>
    <string name="untitled">No title</string>
    <string name="settings">Settings</string>
    <string name="no_bluetooth">No Bluetooth</string>
    <string name="enabled">Enabled</string>
    <string name="enable">Enable</string>
    <string name="user_location">Your location is <xliff:g example="Amsterdam" id="location1">&lt;ul>&lt;font color=\'#009688\'>%1$s&lt;/font>&lt;/ul></xliff:g>, <xliff:g example="The Netherlands" id="location2">&lt;ul>&lt;font color=\'#009688\'>%2$s&lt;/font>&lt;/ul></xliff:g>. Use this location?</string>
    <string name="disabled">Disabled</string>
    <string name="turning_off">Turning off</string>
    <string name="turning_on">Turning on</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="clock_options">Clock options</string>
    <string name="timezone">Timezone</string>
    <string name="title">Title</string>
    <string name="music">Music</string>
    <string name="camera">Camera</string>
    <string name="edit_layout">Edit layout</string>
    <string name="select_switch_item">Tap the item to switch locations with</string>
    <string name="remove_row">Remove row</string>
    <string name="remove_cell">Remove cell</string>
    <string name="insert_cell_left">Insert cell left</string>
    <string name="insert_cell_right">Insert cell right</string>
    <string name="insert_row_above">Insert row above</string>
    <string name="insert_row_below">Insert row below</string>
    <string name="empty">Empty</string>
    <string name="home_item_app_widget_title">App widget</string>
    <string name="home_item_image_title">Profile image</string>
    <string name="home_item_temperature_title">Temperature</string>
    <string name="home_item_sunset_title">Sunrise and sunset</string>
    <string name="home_item_wind_title">Wind</string>
    <string name="home_item_app_title">App launcher</string>
    <string name="home_item_clock_title">Clock</string>
    <string name="home_item_bluetooth_toggle_item">Bluetooth toggle</string>
    <string name="no_title">No title</string>
    <string name="choose_intent_type">Choose type</string>
    <string name="intent_action">Action</string>
    <string name="intent_category">Category</string>
    <string name="intent_target_package">Package</string>
    <string name="intent_target_class">Class</string>
    <string name="app_launcher_options">App launcher options</string>
    <string name="intent_icon">Icon</string>
    <string name="advanced">Advanced</string>
    <string name="select_package_first">Please select a package first</string>
    <string name="shortcut">Shortcut</string>
    <string name="continue_picker">This will clear this launcher, continue?</string>
    <string name="show_advanced_options">Show advanced options</string>
    <string name="execute_as_root">Execute as root (needs root)</string>
    <string name="welcom_app_launcher_editor">Welcome to the App launcher editor!</string>
    <string name="app_laucher_editor_description">Just press the wizard icon to get started and to pick a shortcut or app</string>
    <string name="app_editor_advanced_description">Switch to advanced mode if you want to run a command, send a broadcast, start a service or want to enter the intent info manually.</string>
    <string name="got_it">Got it</string>
    <string name="need_at_least_one_cell">You need to have at least one item in you home page</string>
    <string name="apps_page_name">Apps</string>
    <string name="agenda_page_name">Agenda</string>
    <string name="people_page_name">People</string>
    <string name="calls_page_name">Calls</string>
    <string name="settings_page_name">Settings</string>
    <string name="sms_page_name">Sms</string>
    <string name="search_page_name">Search</string>
    <string name="action_move">Move</string>
    <string name="pages">Pages</string>
    <string name="action_set_height">Set height</string>
    <string name="default_hotspot_name">My hotspot</string>
    <string name="height">Height</string>
    <string name="hide_hotspots_when_done">Hide hotspots again</string>
    <string name="unlock">Unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="partially_unlocked">Partially unlocked</string>
    <string name="manage_home_pages">Manage home-pages</string>
    <string name="everything">Everything</string>
    <string name="unlock_all_description">Unlocks all pages in a single package as a single purchase. This includes the settings and sms page which are not yet available.</string>
    <string name="intent_error_message">Error executing the app launcher. Check the logs for more info</string>
    <string name="unlock_disclaimer">In case your purchases from Appsi are wrongly not listed as unlocked, check your connection and try again. If the problem persists, please contact Google play support about a licensing error.</string>
    <string name="import_from_appsi">Import Appsi Plugins</string>
    <string name="unlock_instruction">Tap the name of the plugin to unlock it. Make sure the plugin is installed and up-to-date</string>
    <string name="whats_new">What\'s new</string>
    <string name="coming_soon">Coming soon</string>
    <string name="download_apks">Get the apks</string>
    <string name="first_usage_appsii_done">Appsii is now ready for use.</string>
    <string name="join_the_community">Join the community</string>
    <string name="community_description">Join the Appsii community on Google+ to learn more about Appsii and to share your feedback with the developer. In the about menu there are several links you can use to learn more about Appsii, to suggest ideas or to report bugs.</string>
    <string name="join">Join</string>
</resources>