<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015. Appsi Mobile
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_set_item_none"
        android:title="@string/empty"
        />

    <item
        android:id="@+id/action_set_app_widget"
        android:title="@string/home_item_app_widget_title"
        />

    <item
        android:id="@+id/action_set_item_image"
        android:title="@string/home_item_image_title"
        />

    <item
        android:id="@+id/action_set_item_temperature"
        android:title="@string/home_item_temperature_title"
        />


    <item
        android:id="@+id/action_set_item_sun"
        android:title="@string/home_item_sunset_title"
        />

    <item
        android:id="@+id/action_set_item_wind"
        android:title="@string/home_item_wind_title"
        />

    <item
        android:id="@+id/action_set_item_app"
        android:title="@string/home_item_app_title"
        />

    <item
        android:id="@+id/action_set_item_clock"
        android:title="@string/home_item_clock_title"
        />

    <item
        android:id="@+id/action_set_item_bluetooth"
        android:title="@string/home_item_bluetooth_toggle_item"
        />

</menu>