<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015. Appsi Mobile
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Version -->
    <Preference
        android:key="pref_appsi_version"
        android:title="@string/application_name"
        />

    <!-- Appsi community on Google+ -->
    <Preference
        android:key="google_plus_community"
        android:title="@string/pref_community_title"
        >
    </Preference>

    <!-- Google moderator link -->
    <Preference
        android:key="google_moderator"
        android:title="@string/pref_suggestions"
        >
    </Preference>

    <!-- beta tester: http://appsi.appsimobile.com/become-a-beta-tester -->
    <Preference
        android:key="beta_tester"
        android:title="@string/pref_become_beta_tester_title"
        >
    </Preference>

    <!-- Changelog -->
    <Preference
        android:key="change_log"
        android:title="@string/pref_changelog_title"
        >
    </Preference>

    <!-- Follow me on Google+ -->
    <Preference
        android:key="me_google_plus"
        android:title="@string/pref_follow_me_title"
        >
    </Preference>

    <Preference
        android:title="@string/whats_new"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.appsimobile.appsii.WhatsNewActivity"
            android:targetPackage="com.appsimobile.appsii"/>
    </Preference>

    <Preference
        android:title="@string/coming_soon"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.appsimobile.appsii.ComingSoonActivity"
            android:targetPackage="com.appsimobile.appsii"/>
    </Preference>


    <!-- Facebook page - ->
    <Preference
        android:summary="@string/pref_facebook_summary"
        android:title="@string/pref_facebook_title"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://goo.gl/bmpkih"
            />
        <!- - https://www.facebook.com/AppsiSidebar -> http://goo.gl/bmpkih - ->
    </Preference>
    -->


</PreferenceScreen>