<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015. Appsi Mobile
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_go_to_today"
        android:icon="?attr/appsiIconToday"
        android:showAsAction="always"
        android:title="@string/go_to_today"
        />

    <item
        android:id="@+id/empty"
        android:icon="?attr/appsiOverflowButton"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@null">
        <menu>
            <item
                android:id="@+id/action_new_calendar_event"
                android:title="@string/new_calendar_event"
                app:icon="@drawable/ic_add_black_24dp"
                />

            <item
                android:id="@+id/view_type_normal"
                android:title="@string/agenda_view_type_normal"
                app:icon="@drawable/ic_view_agenda_black_24dp"

                />
            <item
                android:id="@+id/view_type_collapsable"
                android:title="@string/agenda_view_type_categories"
                app:icon="@drawable/ic_view_list_black_24dp"/>
        </menu>
    </item>
</menu>